--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deploy": "serverless deploy",
-    "deploy:debug": "SLS_DEBUG=* serverless deploy"
+    "deploy:debug": "SLS_DEBUG=* serverless deploy",
+    "remove": "serverless remove"
   },
   "author": "mel",
   "devDependencies": {
